--- a/debug2/readme
+++ b/debug2/readme
@@ -7,4 +7,7 @@ load_quadruples.py读取四元组翻译成中间码
 ./load_quadruples.py
 
 此外 修改部分compile.l .y删除部分功能
-名称还未替换
+
+============================
+
+tree rename finish
